[gd_scene load_steps=9 format=3 uid="uid://cxb7rpxgq61i"]

[ext_resource type="Script" path="res://scripts/Telainicio.gd" id="1_tj7fl"]
[ext_resource type="Texture2D" uid="uid://bhmqht1kkmjay" path="res://Import/Background/bg_layer1.png" id="2_t6ivc"]
[ext_resource type="Texture2D" uid="uid://bj7wxhiw7jrlf" path="res://Import/Background/bg_layer2.png" id="3_5434k"]
[ext_resource type="Texture2D" uid="uid://dbg61v2nggdu1" path="res://Import/Background/bg_layer3.png" id="4_1pt3s"]
[ext_resource type="Texture2D" uid="uid://b68miou3rsjwp" path="res://Import/Background/bg_layer4.png" id="5_c3m3d"]
[ext_resource type="Texture2D" uid="uid://cpw87sxdtbke2" path="res://icon.svg" id="6_mn10t"]
[ext_resource type="Theme" uid="uid://bkn0dftw8jsu3" path="res://button_theme.tres" id="7_3h0r3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6h0bj"]

[node name="Telainicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tj7fl")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 324.0
offset_right = 1152.0
offset_bottom = 324.0
size_flags_vertical = 4
texture = ExtResource("2_t6ivc")
expand_mode = 2
stretch_mode = 3

[node name="Bg2" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 324.0
offset_right = 1152.0
offset_bottom = 324.0
size_flags_vertical = 4
texture = ExtResource("3_5434k")
expand_mode = 2
stretch_mode = 3

[node name="Bg3" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 324.0
offset_right = 1152.0
offset_bottom = 324.0
size_flags_vertical = 4
texture = ExtResource("4_1pt3s")
expand_mode = 2
stretch_mode = 3

[node name="Bg4" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 324.0
offset_right = 1152.0
offset_bottom = 324.0
size_flags_vertical = 4
texture = ExtResource("5_c3m3d")
expand_mode = 2
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_mn10t")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6h0bj")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6h0bj")

[node name="Button_start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("7_3h0r3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
text = "Come√ßar"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6h0bj")

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6h0bj")

[node name="Button_quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_3h0r3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
text = "Sair"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_quit" to="." method="_on_button_quit_pressed"]
